--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     {% load static %}
     <!-- Header -->
-    <header>
+   <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -14,14 +14,24 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="{% static 'img/slider1.png' %}" alt="First slide">
-
+              <!--<div class="carousel-caption d-none d-md-block">
+                <h3>Suasana Pasar</h3>
+                <p>Henk Ngantung</p>
+              </div>-->
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/slider2.jpeg' %}" alt="Second slide">
-
+              <img class="d-block w-100" src="{% static 'img/slide3.jpeg' %}" alt="Second slide">
+              <!--<div class="carousel-caption d-none d-md-block">
+                <h3>Suasana Pasar</h3>
+                <p>Henk Ngantung</p>
+              </div>-->
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/slider3.jpeg' %}" alt="Third slide">
+              <img class="d-block w-100" src="{% static 'img/slide1.jpeg' %}" alt="Third slide">
+              <!--<div class="carousel-caption d-none d-md-block">
+                <h3>Suasana Pasar</h3>
+                <p>Henk Ngantung</p>
+              </div>-->
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -36,126 +46,160 @@
     </header>
 
     <article>
-      <div class="container-fluid">
-          <div class="row">
+      <div class="container-fluid sectionhome">
+
+          <!--koleksi-->
+          <div class="row ">
             <div class="col-md-12 sectionkoleksi">
-              <div class="divkoleksi">
+              <span class="divkoleksi">
                 <h3>Koleksi</h3>
                 <a href="#">View All</a>
+              </span>
+            </div>
+            <div class="col-md-12 sectionkoleksi sectionkoleksilist">
+              <div class="row">
+                    <div class="col-md-4">
+                      <a href="/koleksi/lukisan/">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                        <label class="koleksilabel">Lukisan</label>
+                      </a>
+                    </div>
+                    <div class="col-md-4">
+                      <a href="koleksi/patung/">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                        <label class="koleksilabel">Patung</label>
+                      </a>
+                    </div>
+                    <div class="col-md-4">
+                      <a href="/koleksi/kriya/">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                        <label class="koleksilabel">Kriya</label>
+                      </a>
+                    </div>
               </div>
             </div>
-            <div class="col-lg-12 sectionkoleksi">
-                <ul>
-                    <li class="koleksidiv">
+          </div>
+
+
+          <!--news-->
+          <div class="row">
+            <div class="col-md-12 sectionkoleksi">
+              <span class="divkoleksi">
+                <h3>News</h3>
+                <a href="#">View All</a>
+              </span>
+            </div>
+            <div class="col-md-12 sectionkoleksi sectionkoleksilist">
+              <div class="row">
+                    <div class="col-md-3 listnews">
                       <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">Potret dan Sensualitas</label>
+                        <img src="{% static 'img/jpg1.jpg' %}">
+                         <figcaption>
+                          <h2>SENANDUNG IBU PERTIWI</h2>
+                          <h3>2-30 AGUSTUS 2018</h3>
+                          <label>GALERI NASIONAL INDONESIA</label>
+                        </figcaption>
                       </a>
-                    </li>
-                    <li class="koleksidiv">
+                    </div>
+
+                    <div class="col-md-3 listnews">
                       <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">Alam Benda</label>
+                        <img src="{% static 'img/jpg1.jpg' %}">
+                         <figcaption>
+                          <h2>SENANDUNG IBU PERTIWI</h2>
+                          <h3>2-30 AGUSTUS 2018</h3>
+                          <label>GALERI NASIONAL INDONESIA</label>
+                        </figcaption>
                       </a>
-                    </li>
-                    <li class="koleksidiv">
+                    </div>
+
+                     <div class="col-md-3 listnews">
                       <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">Pemandangan Alam dan Kota</label>
+                        <img src="{% static 'img/jpg1.jpg' %}">
+                         <figcaption>
+                          <h2>SENANDUNG IBU PERTIWI</h2>
+                          <h3>2-30 AGUSTUS 2018</h3>
+                          <label>GALERI NASIONAL INDONESIA</label>
+                        </figcaption>
                       </a>
-                    </li>
-                    <li class="koleksidiv">
+                    </div>
+
+
+                     <div class="col-md-3 listnews">
                       <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">Perjuangan dan Potret para pejuang</label>
+                        <img src="{% static 'img/jpg1.jpg' %}">
+                         <figcaption>
+                          <h2>SENANDUNG IBU PERTIWI</h2>
+                          <h3>2-30 AGUSTUS 2018</h3>
+                          <label>GALERI NASIONAL INDONESIA</label>
+                        </figcaption>
                       </a>
-                    </li>
-                    <li class="koleksidiv">
-                      <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">Tradisi/Budaya/Mitologi/Keseharian</label>
-                      </a>
-                    </li>
-                    <li class="koleksidiv">
-                      <a href="#">
-                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
-                        <label class="koleksilabel">patung dan Kriya</label>
-                      </a>
-                    </li>
-                </ul>
+                    </div>
+
+              </div>
             </div>
           </div>
 
 
           <!--perupa-->
-          <div class="row">
+           <div class="row">
             <div class="col-md-12 sectionkoleksi">
-              <div class="divkoleksi">
+              <span class="divkoleksi">
                 <h3>Perupa</h3>
+                <a href="#">View All</a>
+              </span>
+            </div>
+            <div class="col-md-12 sectionkoleksi sectionkoleksilist">
+              <div class="row">
+                    <div class="listperupa">
+                      <a href="#">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                      </a>
+                    </div>
+                    <div class="listperupa">
+                      <a href="#">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                      </a>
+                    </div>
+                   <div class="listperupa">
+                      <a href="#">
+                        <img src="{% static 'img/jpg1.jpg' %}" class="koleksiimg">
+                      </a>
+                    </div>
               </div>
             </div>
-            <div class="col-md-12">
-              <ul>
-                  <li class="col-md-4 perupalist">
-                    <a href="#">
-                      <img src="{% static 'img/perupa1.jpg' %}" class="">
-                      <label class="koleksilabel">Basuki Abdoellah</label>
-                    </a>
-                  </li>
-                  <li class="col-md-4 perupalist">
-                    <a href="#">
-                      <img src="{% static 'img/perupa2.jpg' %}" class="">
-                      <label class="koleksilabel">Nature</label>
-                    </a>
-                  </li>
-                  <li class="col-md-4 perupalist">
-                    <a href="#">
-                      <img src="{% static 'img/perupa3.jpg' %}" class="">
-                      <label class="koleksilabel">Nature</label>
-                    </a>
-                  </li>
-              </ul>
-            </div>
           </div>
-
-
-
-          <!--News-->
-          <div class="row">
-            <div class="col-md-12 sectionkoleksi">
-              <div class="divkoleksi">
-                <h3>News</h3>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <ul class="sectionnews">
-                  <li class="col-md-4 perupalist newslist">
-                    <a href="#">
-                      <img src="{% static 'img/karya1.jpg' %}">
-                      <span class="divdetailnews">
-                        <h2>SENANDUNG IBU PERTIWI</h2>
-                        <h3>2-30 AGUSTUS 2018</h3>
-                        <label>GALERI NASIONAL INDONESIA</label>
-                      </span>
-                    </a>
-                  </li>
-                  <li class="col-md-4 perupalist newslist">
-                    <a href="#">
-                      <img src="{% static 'img/karya1.jpg' %}" class="">
-                     
-                    </a>
-                  </li>
-                  <li class="col-md-4 perupalist newslist">
-                    <a href="#">
-                      <img src="{% static 'img/karya1.jpg' %}" class="">
-
-                    </a>
-                  </li>
-              </ul>
-            </div>
-          </div>
+          <!--end perupa-->
       </div>
     </article>
 
+  {% endblock %}
+
+{% block js %}
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
+
+
+    <script>
+    function openSearch() {
+        document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function closeSearch() {
+        document.getElementById("myOverlay").style.display = "none";
+    }
+    </script>
+
+    <script src="js/cbpHorizontalSlideOutMenu.min.js"></script>
+    <script>
+      var menu = new cbpHorizontalSlideOutMenu( document.getElementById( 'cbp-hsmenu-wrapper' ) );
+    </script>
 
 {% endblock %}
