--- a/singgasanaseni/templates/istana/istanamerdeka.html
+++ b/singgasanaseni/templates/istana/istanamerdeka.html
@@ -3,42 +3,27 @@
 
 {% block content %}
 
- <article>
+
+
+    <!-- Header -->
+    <header class="artikel">
+              <img src="{% static 'img/slider1.png' %}">
+    </header>
+
+    <article>
       <div class="container-fluid">
           <!--koleksi-->
           <div class="row sectionistana">
-            <div class="col-md-3 sidebaristana sidebarberita">
-              <div class="beritaterkait">
-                <label class="date">17/08/2017</label>
+            <div class="col-md-3 sidebaristana">
+                <h3>Istana Merdeka</h3>
+                <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
                 <font>konstruksi awal</font><br>
-                <label> Lorem ipsum, atau ringkasnya lipsum, adalah teks standar</label><br>
-                <label class="source"><i>detik.com</i></label><br>
-                <span>&nbsp;&nbsp;&nbsp;</span>
-              </div>
-              <div class="beritaterkait">
-                <label class="date">17/08/2017</label>
-                <font>konstruksi awal</font><br>
-                <label> Lorem ipsum, atau ringkasnya lipsum, adalah teks standar</label><br>
-                <label class="source"><i>detik.com</i></label><br>
-                <span>&nbsp;&nbsp;&nbsp;</span>
-              </div>
-              <div class="beritaterkait">
-                <label class="date">17/08/2017</label>
-                <font>konstruksi awal</font><br>
-                <label> Lorem ipsum, atau ringkasnya lipsum, adalah teks standar</label><br>
-                <label class="source"><i>detik.com</i></label><br>
-                <span>&nbsp;&nbsp;&nbsp;</span>
-              </div>
+                <label>1744</label><br>
+                <font>gaya arsitektur</font><br>
+                <label>loremupsim <br>loremspid loremipsum loremspid</label>
             </div>
-
-            <div class="col-md-7 isiberita">
-              <img src="{% static 'img/slider1.png' %}" class="imgartikel">
-              <div class="heading">
-                <label class="date">17/08/2019s</label>
-                <h3>konstruksi konstruksikonstruksikonstruksi </h3>
-                <label class="title">konstruksi konstruksikonstruksikonstruksi  konstruksi konstruksikonstruksikonstruksi </label>
-              </div>
-              <p>
+             <div class="col-md-7">
+                <p>
                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
@@ -55,6 +40,8 @@
 {% endblock content%}
 
 {% block js %}
+
+    <!-- Bootstrap core JavaScript -->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
@@ -63,4 +50,16 @@
 
     <!-- Custom scripts for this template -->
     <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
-{% endblock %}
+
+
+    <script>
+    function openSearch() {
+        document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function closeSearch() {
+        document.getElementById("myOverlay").style.display = "none";
+    }
+    </script>
+
+{% endblock js %}
