--- a/singgasanaseni/templates/perupa/indexpatung.html
+++ b/singgasanaseni/templates/perupa/indexpatung.html
@@ -9,11 +9,11 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Lukisan</h3>
+                <h3>Patung</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
-                  <label class="filtermenu" style="padding: 0;">Filter</label>
+                  <label class="filtermenu" style="padding: 0; size:15px ">Filter</label>
                   <!--filter-->
                   <div class="filtermenu portfolioFilter">
                     <a href="#" data-filter="*" class="current">ALL</a>
@@ -22,14 +22,11 @@
                     <a href="#" data-filter=".c">C</a>
                     <a href="#" data-filter=".d">D</a>
                     <a href="#" data-filter=".e">E</a>
-                    <a href="#" data-filter=".f">F</a>
-                    <a href="#" data-filter=".g">G</a>
-                    <a href="#" data-filter=".h">H</a>
-                    <a href="#" data-filter=".i">I</a>
+                    <a href="#" data-filter=".f">G</a>
+                    <a href="#" data-filter=".i">H</a>
                     <a href="#" data-filter=".j">J</a>
                     <a href="#" data-filter=".k">K</a>
-                    <a href="#" data-filter=".l">L</a>
-                    <a href="#" data-filter=".m">M</a>
+                    <a href="#" data-filter=".l">M</a>
                     <a href="#" data-filter=".n">N</a>
                     <a href="#" data-filter=".o">O</a>
                     <a href="#" data-filter=".p">P</a>
@@ -59,23 +56,23 @@
           <div class="row bgkarya">
              <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi" style="border: none;">
-                <h3>page {{ perupa.number }}/{{ perupa.paginator.num_pages }}</h3>
+                <h3>page {{ pematung.number }}/{{ pematung.paginator.num_pages }}</h3>
                 <span class="pagingkarya">
                     <ul class="pagination">
-                        {% if perupa.has_previous %}
-                            <a href="?page={{ perupa.previous_page_number }}"><</a>
+                        {% if pematung.has_previous %}
+                            <a href="?page={{ pematung.previous_page_number }}"><</a>
                         {% endif %}
 
-                        {% for i in perupa.paginator.page_range %}
-                            {% if perupa.number == i %}
+                        {% for i in pematung.paginator.page_range %}
+                            {% if pematung.number == i %}
                                 <li class="active"><span>{{ i }}<span class="sr-only">(current)</span></span></li>
                             {% else %}
                                 <li><a href="?page={{ i }}">{{ i }}</a></li>
                             {% endif %}
                         {% endfor %}
 
-                        {% if perupa.has_next %}
-                            <a href="?page={{ perupa.next_page_number }}"> > </a>
+                        {% if pematung.has_next %}
+                            <a href="?page={{ pematung.next_page_number }}"> > </a>
                         {% endif %}
                      </ul>
                 </span>
@@ -84,7 +81,7 @@
             <div class="col-md-12 containerperupa">
               <div class="row seckarya portfolioContainer">
 
-                            {% for Perupa in perupa %}
+                            {% for Perupa in pematung %}
                                 <div class="{{ Perupa.Panggilan|slice:"1"|lower }}">
                                     <p>
                                       <h5><a href="/perupa/{{ Perupa.id }}">{{ Perupa.Panggilan }}</a></h5>
