--- a/singgasanaseni/templates/perupa/indexpatung.html
+++ b/singgasanaseni/templates/perupa/indexpatung.html
@@ -22,11 +22,14 @@
                     <a href="#" data-filter=".c">C</a>
                     <a href="#" data-filter=".d">D</a>
                     <a href="#" data-filter=".e">E</a>
-                    <a href="#" data-filter=".f">G</a>
-                    <a href="#" data-filter=".i">H</a>
+                    <a href="#" data-filter=".f">F</a>
+                    <a href="#" data-filter=".g">G</a>
+                    <a href="#" data-filter=".h">H</a>
+                    <a href="#" data-filter=".i">I</a>
                     <a href="#" data-filter=".j">J</a>
                     <a href="#" data-filter=".k">K</a>
-                    <a href="#" data-filter=".l">M</a>
+                    <a href="#" data-filter=".l">L</a>
+                    <a href="#" data-filter=".m">M</a>
                     <a href="#" data-filter=".n">N</a>
                     <a href="#" data-filter=".o">O</a>
                     <a href="#" data-filter=".p">P</a>
