--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -21,7 +21,7 @@
                       <li><a href="#">Kriya</a></li>
                     </ul>
                   </div>
-                  <div class="filtermenu temakarya">
+                  <!--div class="filtermenu temakarya">
                     <a id="link2">Tema +</a>
                     <ul id="jenistema" class="jenisbenda">
                       <li><a href="#">Potret dan Sensualitas</a></li>
@@ -31,7 +31,7 @@
                       <li><a href="#">Tradisi/Budaya/Mitologi/Keseharian</a></li>
                       <li><a href="#">Patung dan Kriya</a></li>
                     </ul>
-                  </div>
+                  </div-->
 
                 </div>
                 <div class="formsearchkarya">
