--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -51,26 +51,27 @@
                 <a href="#">Koleksi</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Koleksi benda seni</i></a></li>
-                  <li><a href="/koleksi/lukisan/">Lukisan</a></li>
-                  <li><a href="/koleksi/patung/">Patung</a></li>
-                  <li><a href="/koleksi/kriya/">Kriya</a></li>
+                  <li><a href="{% url 'Perupa-list' %}">Lukisan</a></li>
+                  <li><a href="{% url 'Pematung-list' %}">Patung</a></li>
+                  <li><a href="{% url 'Pengrajin-list' %}">Kriya</a></li>
                 </ul>
               </li>
+              <li><a href="{% url 'karya-list' %}">Galeri</a></li>
               <li>
                 <a href="#">Istana</a>
                 <ul class="cbp-hssubmenu">
                   <li class="menufirst"><a href="#"><i>Istana kepresidenan</i></a></li>
-                  <li><a href="/istana/merdeka">Istana Merdeka</a></li>
-                  <li><a href="/istana/istananegara">Istana Negara</a></li>
-                  <li><a href="/istana/bogor">Istana Bogor</a></li>
-                  <li><a href="/istana/tampaksiring">Istana Tampaksiring</a></li>
-                  <li><a href="/istana/cipanas">Istana Cipanas</a></li>
-                  <li><a href="/istana/yogyakarta">Istana Yogyakarta</a></li>
+                  <li><a href="{% url 'istana-merdeka' %}">Istana Merdeka</a></li>
+                  <li><a href="{% url 'istana-negara' %}">Istana Negara</a></li>
+                  <li><a href="{% url 'istana-bogor' %}">Istana Bogor</a></li>
+                  <li><a href="{% url 'istana-tampaksiring' %}">Istana Tampaksiring</a></li>
+                  <li><a href="{% url 'istana-cipanas' %}">Istana Cipanas</a></li>
+                  <li><a href="{% url 'istana-yogyakarta' %}">Istana Yogyakarta</a></li>
                 </ul>
               </li>
               <li><a href="#">Publikasi</a></li>
-              <li><a href="/berita/">Berita</a></li>
-              <li><a href="/tentangkami/">Tentang Kami</a></li>
+              <li><a href="{% url 'berita-list' %}">Berita</a></li>
+              <li><a href="{% url 'tentang-kami' %}">Tentang Kami</a></li>
               <li class="searchslot">
                    <form class="navbar-form navbar-right">
                   <div class="input-group">
@@ -104,10 +105,24 @@
 `
         {% endblock %}
 
-    <footer>
-        ©Singgasana Seni. Hak Cipta dilindungi undang-undang
-
+    <footer class="footermenu">
+        <span class="firstfoot">
+          &copy; 2018-2019 Yayasan Singgasana Seni
+        </span>
+        <span>
+          <a href="#">Privacy Policy</a>
+        </span>
+        <span>
+          <a href="#">Sitemap</a>
+        </span>
+        <span class="rightfoot">
+            <label>SHARE</label>
+            <a href="#"><img src="{% static 'img/facebook.jpg' %}"></a>
+            <a href="#"><img src="{% static 'img/instagram.jpg' %}"></a>
+        </span>
     </footer>
+
+
       <script>
     function openSearch() {
         document.getElementById("myOverlay").style.display = "block";
